--- a/aboutus.html
+++ b/aboutus.html
@@ -42,6 +42,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a href="./index.html#table"><button type="button" class="btn btn-warning">Reserve Table</button></a>
+                </div>
             </div>
         </div>
     </header>
