--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a href="#table"><button type="button" class="btn btn-warning">Reserve Table</button></a>
+                </div>
             </div>
         </div>
     </header>
@@ -104,6 +107,7 @@
                 
             </div>
         </div>
+        <a name="table"></a>
         <div class="col-8 mt-2 mb-2 offset-md-2">
             <div class="card">
                 <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
