--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a href="#table"><button type="button" class="btn btn-warning">Reserve Table</button></a>
-                </div>
+                    <a role="button" class="btn btn-block nav-link btn-warning"
+                    data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                    data-placement="bottom" href="#table">Reserve Table</a></div>
             </div>
         </div>
     </header>
@@ -222,6 +223,13 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+    
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    
+    </script>
 </body>
 
 </html>
