--- a/index.html
+++ b/index.html
@@ -285,28 +285,7 @@
         });
     
     </script>
-    <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
-                }
-                // $("#mycarousel").carousel('pause');
-            });
-            // $("#carousel-play").click(function(){
-            //     $("#mycarousel").carousel('cycle');
-            // });
-
-        });
-    </script>
+       <script src="js/scripts.js"></script>
 
 </body>
 
